# advanced-cybersec-tool

./: .gitignore  LICENSE  README.md  file_encryptor.py  main.py  port_scanner.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/: architecture.md  usage.md
scripts/: install_deps.sh  run_scan.sh
src/: config.py  main.py
src/core/: analyzer.py  nmap_wrapper.py  scanner.py  scapy_helpers.py  socket_utils.py
src/modules/exploitation/: __init__.py
src/modules/reporting/: __init__.py
src/modules/vulnerability/: __init__.py
tests/: conftest.py  test_scanner.py
