[tool.poetry]
name = "advanced-cybersec-tool"
version = "0.1.0"
description = "An advanced cybersecurity tool for penetration testing, vulnerability scanning, and threat detection."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
nmap = "^0.0.1"
scapy = "^2.4.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"